irongallery/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-db-service
spec:
  type: NodePort
  selector:
    db: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
