irongallery/irongallery-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
# Exposes HTTP and HTTPS routes
# from outside the cluster
# to services within the cluster
kind: Ingress
metadata:
  name: iron-gallery-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: iron-gallery-braavos.com
    http:
      paths:
      - path: /
        backend:
          serviceName: iron-gallery-service
          servicePort: 80
