irongallery/db-firewall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iron-gallery-firewall
spec:
  podSelector:
    matchLabels:
      db: mariadb
  policyTypes:
    # Ingress: Allows connections FROM source to pods
    # Egress: Allows connections from pods TO go out
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            run: iron-gallery
      ports:
        - protocol: TCP
          port: 3306
